--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-images": "^1.2.0-beta.7",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
